[gd_scene load_steps=7 format=2]

[ext_resource path="res://Overlap/FireFloor.gd" type="Script" id=1]
[ext_resource path="res://PixelArt/UI/Signs/fire_alert.png" type="Texture" id=2]
[ext_resource path="res://PixelArt/UI/white64.png" type="Texture" id=3]
[ext_resource path="res://Animations/Bosses/Fire/floor_blink_alert.tres" type="Animation" id=4]
[ext_resource path="res://Animations/Bosses/Fire/floor_attack.tres" type="Animation" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 158.977, 104.809 )

[node name="FireFloor" type="Area2D"]
visible = false
collision_layer = 3072
collision_mask = 0
script = ExtResource( 1 )

[node name="attack" type="Sprite" parent="."]
modulate = Color( 1, 0.627451, 0.627451, 0.705882 )
position = Vector2( 0, 104 )
scale = Vector2( 4.963, 3.263 )
texture = ExtResource( 3 )

[node name="area_alert" type="Sprite" parent="."]
modulate = Color( 1, 0.391238, 0.391238, 0.235294 )
position = Vector2( 0, 104 )
scale = Vector2( 4.96281, 3.26297 )
texture = ExtResource( 3 )

[node name="alert_icon" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.627451 )
position = Vector2( 0, 104 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 104 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = ExtResource( 5 )
anims/blink_alert = ExtResource( 4 )

[node name="alert_time" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="dps" type="Timer" parent="."]
one_shot = true

[node name="attack_time" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="alert_time" to="." method="_on_alert_time_timeout"]
[connection signal="timeout" from="dps" to="." method="_on_dps_timeout"]
[connection signal="timeout" from="attack_time" to="." method="_on_attack_time_timeout"]
